@@ -1,5 +1,11 @@
 2008-07-20  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Better tree magic for HD-DVD
+	* tests/tree-list: add more tests for the recently added
+	tree magics
+
+2008-07-20  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add missing treemagic for the
 	recently added filetypes
 
